package/mctp: Add mctp package
Initial configuration obtained from:
    https://github.com/birkelund/hwtests/

The package requires a kernel > 5.17.x Package versions
>= 2.1 will require an even newer than 5.17 kernel.

Signed-off-by: Christian Grönke <christian.groenke@9elements.com>

--- a/package/Config.in
+++ b/package/Config.in
@@ -1,5 +1,4 @@
 menu "Target packages"
-
 	source "package/busybox/Config.in"
 	source "package/skeleton/Config.in"
 	source "package/skeleton-custom/Config.in"
@@ -549,6 +548,7 @@ endmenu
 	source "package/mali-driver/Config.in"
 	source "package/mali-t76x/Config.in"
 	source "package/mbpfan/Config.in"
+	source "package/mctp/Config.in"
 	source "package/mdadm/Config.in"
 	source "package/mdevd/Config.in"
 	source "package/mdio-tools/Config.in"
